--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -141,6 +141,12 @@ GER_subsidise_toy_makers_in_the_Rhine:0 "Subsidise Toy Makers in the Rhine"
 GER_funding_shipyards_in_bremen:0 "Funding New Shipyards in Bremen"
 GER_expand_local_administration_centres:0 "Expand Local Administration Centres"
 
+#Military Constructions
+GER_military_constructions:0 "Military Constructions"
+GER_construct_fortifications_in_konisburg:0 "Construct Fortifications in Konisburg"
+GER_re_establish_fortifications_in_posen:0 "Re-establish Foritifications on Posen"
+GER_expand_fortifications_in_allestein:0 "Expand Forticiations in Allestein"
+
 #Flags
 GER_ww1_state_munitions:0 "Investing in State Munitions"
 
