RAJ event UPDATE

--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -9517,7 +9517,7 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_raj.31.a:0 "The beginning of a trend."
  
  ww1_raj.32.t:0 "Murder of Clement De La Haye"
- ww1_raj.32.d:0 "During the night, Clement De La Haye, the headmaster of Newington House, a college in Madras, was shot dead in his bed. Although the heir to the Singampatti estate was initially accused, he was quickly acquitted, leaving the identity of the murderer unknown. Various motives have been put forward for the murder. According to eyewitnesses, the boys at the house were often offended by De La Haye's racist remarks, as he often referred to them as ''barbaric Tamilians''. There were also rumours that some of the boys at the college had been seduced by De La Haye's wife."
+ ww1_raj.32.d:0 "During the night, Clement De La Haye, the headmaster of Newington House, a college in Madras, was shot dead in his bed. Although the heir to the Singampatti estate was initially accused, he was quickly acquitted, leaving the identity of the murderer unknown.\n\nVarious motives have been put forward for the murder. According to eyewitnesses, the boys at the house were often offended by De La Haye's racist remarks, as he often referred to them as ''barbaric Tamilians''. There were also rumours that some of the boys at the college had been seduced by De La Haye's wife."
  ww1_raj.32.a:0 "His wife certainly is cute, but that's no reason to murder him!"
  
  ww1_raj.33.t:0 "Kisan Sabha"
@@ -9528,18 +9528,42 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_raj.34.d:0 "PLACEHOLDER"
  ww1_raj.34.a:0 "How could you reform the words of god?"
 
- ww1_raj.35.t:0 ""
+ ww1_raj.35.t:0 "All India Khilafat Conference"
  ww1_raj.35.d:0 "PLACEHOLDER"
- ww1_raj.35.a:0 ""
+ ww1_raj.35.a:0 "When it's not the Hindus it's the Muslim ! Jeanne ! Au s'cours!"
 
  ww1_raj.36.t:0 "Buckingham and Carnatic Mills Strike"
  ww1_raj.36.d:0 "PLACEHOLDER"
  ww1_raj.36.a:0 "Adress their strifes."
  ww1_raj.36.b:0 "Supress the Workers."
 
- ww1_raj.37.t:0 ""
+ ww1_raj.37.t:0 "Malabar Rebellion"
  ww1_raj.37.d:0 "PLACEHOLDER"
- ww1_raj.37.a:0 ""
+ ww1_raj.37.a:0 "Let's take the fight to them."
+
+ ww1_raj.38.t:0 "Munshiganj Raebareli Massacre"
+ ww1_raj.38.d:0 "Today, after a large protest by Indian farmers in Raebareli, a panicked taluqdar, Sirdar Birpal Singh, opened fire on the crowd. This prompted Veer Pal Singh to also open fire, and on hearing the sound of gunfire, a detachment of mounted police fired indiscriminately into the crowd, killing several.\n\nThe official death toll reported by the National Herald newspaper is thirteen, although other estimates who were in the crowd disagree, putting the death toll in the hundreds, and going so far as to report that the nearby Sai River turned red from the blood. Jawaharlal Nehru, a member of the Indian National Congress, was present and reported to the National Herald that ''... the police had to fire though no one ordered them to do so'', the aim of the peasants being to demand the release of their leaders.\n\n''Funnily'' enough, the British Governor of Uttar Pradesh (Sir Harcourt Butler), the Commissioner and Deputy Commissioners congratulated Sirdar Birpal Singh, the Taluqdar who opened fire on the peasants."
+ ww1_raj.38.a:0 "They ... congratulated him?"
+
+ ww1_raj.39.t:0 "Prince of Wales Riots"
+ ww1_raj.39.d:0 "PLACEHOLDER"
+ ww1_raj.39.a:0 "What a mess..."
+
+ ww1_raj.40.t:0 "Prince of Wales Visit"
+ ww1_raj.40.d:0 "PLACEHOLDER"
+ ww1_raj.40.a:0 "I bet my life savings that he'll be a great Monarch."
+
+ ww1_raj.41.t:0 "Chauri Chaura Incident"
+ ww1_raj.41.d:0 "PLACEHOLDER"
+ ww1_raj.41.a:0 "A police station!?"
+
+ ww1_raj.42.t:0 "Mahatma Gandhi Halt the Non-Cooperation Movement"
+ ww1_raj.42.d:0 "PLACEHOLDER"
+ ww1_raj.42.a:0 "*Sigh*"
+
+ ww1_raj.43.t:0 "Rampa Rebellion"
+ ww1_raj.43.d:0 "PLACEHOLDER"
+ ww1_raj.43.a:0 "Let's take the fight to them."
   
  # PORTUGAL
  ww1_portugal.1.t:0 "Join the Entente"
