usa rework is coming out before germany one

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -8361,6 +8361,8 @@ USA_the_final_report:0 "The Final Report"
 USA_the_final_blow:0 "Oust Jose Mandriz"
 elect_rep:0 "Electable 1912 Presidents include §YWilliam Taft§! §YTheodore Roosevelt§! and §YJoseph Cannon§!"
 elect_dem:0 "Electable 1912 Presidents include §YWoodrow Wilson§! §YChamp Clark§! and one §YSecret Canidate§!"
+USA_national_war_labour_board:0 "National War Labor Board"
+USA_war_industrial_board:0 "War Industrial Board"
  USA_army_investigation_state_very_poor:0 "§RVery Poor§!"
 USA_tungsten_development_in_idaho:0 "Tungsten Development in Idaho"
 USA_tungsten_development_in_nevada:0 "Tungsten Development in Nevada"
