--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -1176,7 +1176,13 @@ ww1_USA.146.d:0 "The film 'The Kaiser, Beast of Berlin' has finally came out in 
 USA_nationalize_coal_mines:0 "Nationalize Coal Mines"
 ww1_USA.146.a:0 "This film shows the true nature of the Kaiser!"
 east_home_front:0 "Modify §YThe Home Front§! by\nFactory Output: §G+10.00%§!"
+wip_home_front:0 "Modify §YThe Home Front§! by\nFactory Output: §G+10.00%§!\n§YMilitary Factory§! Construction Speed: §G+10.00%§!"
+wlb_home_front:0 "Modify §YThe Home Front§! by\nStability: §G+10.00%§!\nWar Support: §G+10.00%§!\nProduction Efficiency Gain: §G+5.00%§!\nMobilization Speed: §G+10.00%§!"
+clb_home_front:0 "Modify §YThe Home Front§! by\nStability: §R-10.00%§!\nWar Support: §R-10.00%§!\nProduction Efficiency Gain: §R-5.00%§!\nFactory Output: §G+8.50%§!\nProduction Efficiency Cap: §G+5.00%§!\nMobilization Speed: §G+10.00%§!"
 4_men_home_front:0 "Modify §YThe Home Front§! by\nWar Support: §G+15.00%§!\nMobilization Speed: §G+10.00%§! "
+USA_corporate_war_board:0 "National War Corporate Board"
+USA_crush_consumerism:0 "Defeat 'Want'"
+USA_oppose_consumerism:0 "Oppose Consumerism"
 it_cant_happen_here:0 "Modify §YThe Home Front§! by\nParty Popularity Stability Modifier: §G+10.00%§!"
 broad_side_batte_lines:0 "Modify §YThe Home Front§! by\nResources Gain Efficiency: §G+10.00%§!"
 broad_side_why:0 "Modify §YThe Home Front§! by\nProduction Efficiency Cap: §G+5.00%§!"
