--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -9729,7 +9729,12 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_luxembourg.5.t: "The Germans Have Invaded!"
  ww1_luxembourg.5.d: "The worst fears came true. The second Franco-German war began again, and Luxembourg was left alone in the double bind."
  ww1_luxembourg.5.a: "No choice but to save the nation..."
- ww1_luxembourg.5.b: "To survive we must do something!"
+ ww1_luxembourg.5.b: "Never surrender!"
+ ww1_luxembourg.6.t: "Decision over Luxembourg"
+ ww1_luxembourg.6.d: "Luxembourg has been liberated by the Allies from oppressive German occupation, but still we did not decide her fate yet."
+ ww1_luxembourg.6.a: "France guarantees the continued independence."
+ ww1_luxembourg.6.b: "[907.OWNER.GetAdjective]s need war reparations."
+ ww1_luxembourg.6.c: "Luxembourg doesn't need to exist."
 
  # KiS NEWS
  kis_news.1.t: "The Great War"
