--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -2812,6 +2812,9 @@ VIN_administration_indigene_desc:0 "Part of the indigenous elites are now member
 
  #Luxembourg
  LUX_minor_army:0 "Minor Army"
+ LUX_occupation:0 "Occupation"
+ LUX_occupation_desc:0 "[ROOT.GetNameDefCap]'s politics are heavily influenced by the German occupation of the state."
+ LUX_occupation_tt:0 "\n§Y[ROOT.GetFlag]Luxembourg's fate would be decided by the victorious powers:\nif [GER.GetFlag]Germany victorious, §R[ROOT.GetFlag]Luxembourg will be annexed§!;\nif [FRA.GetFlag]France victorious, it will be up to them to §Rdecide whether it would remain independent§!.§!"
 
  #Mutasarrifate of Jerusalem
  PAL_moj:0 "International Gendarmerie"
