Tweak and fixes

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -560,6 +560,7 @@ BUL_faster_industrial_expansion:0 "§YThis branch§! will provide §GFaster Indu
 
  FRA_GER_intervention_in_France:0 "German Intervention in France"
  FRA_keep_guard_over_the_versailles_system:0 "Keep Guard over the Versailles System"
+ FRA_keep_guard_over_the_versailles_system_desc:0 "Our glorious victory in the Great War ended a series of bad bloods that stretched back to the Napoleonic Wars and the Franco-Prussian War, but the newly established international order, known as the Versailles System, requires constant effort to maintain. We shall never allow the Germans to seek revenge again."
  FRA_german_intervention_timeout:0 "German War Fatigue Timeout"
  GER_surrender_to_hostical_FRA:0 "Surrender to [16.OWNER.getName]"
  FRA_german_intervention_timeout_desc:0 "After the Great War, even a victorious power like Germany could not afford too long conflicts. If the war were to drag on, it is very likely that she would withdraw."
