Working on Focuses

--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -112,6 +112,21 @@ ww1_germanrework.20.t:0 "The Kaiser Calls for a Military Conference"
  ww1_germanrework.20.d:0 ""
  ww1_germanrework.20.a:0 "A major war is on the horizon"
 
+#Wilhelmine Germany
+ww1_germanrework.21.t:0 "Wilhelmine Germany"
+ ww1_germanrework.21.d:0 "The dawn of Wilhelmine Germany marked a new era of industrial prowess and ambitious imperialism under the leadership of Kaiser Wilhelm II - ascending to the throne in 1888. Wilhelm II sought to propel Germany into the ranks of global superpowers, adopting a policy of Weltpolitik to expand German influence and secure a 'place in the sun.'\n\nThe economy flourished with rapid industrialization throughout the second industrial revolution, making Germany a leader in steel production, chemicals, and electrical engineering. This industrial boom fostered a burgeoning middle class and significant urbanization, transforming the societal landscape. This allowed Wilhelm to sanction the expansion of the German navy under admiral Alfred von Tirpitz, reflecting his aspirations for a formidable maritime presence to rival that of Great Britain.\n\nInternally, during the Wilhelmine period Germany witnessed the rise of the Social Democratic Party, representing the growing working class and advocating for more radical social reforms. This rise of the left poses challenges to the conservative establishment, necessitating a delicate balance between modernization and maintaining traditional power structures.\n\nOn the international stage, Germany's assertive foreign policy aimed at colonial expansion and securing alliances created tensions with other European powers - something that has led Germany to become diplomatically isolated and even 'encircled' by the triple entente. However, the formation of the Triple Alliance with Austria-Hungary and Italy still stands and in those two powers, Germany still has some friends left within the content.\n\nFor now, Wilhelmine Germany stands as a testament to the industrial strength of Germany, and her resolve through the many crises she has, and will, face."
+ ww1_germanrework.21.a:0 "Germany sails a steady course"
+
+#Socialism in Germany
+ww1_germanrework.22.t:0 "Socialism in the German Empire"
+ ww1_germanrework.22.d:0 ""
+ ww1_germanrework.22.a:0 "Being progressive won't win wars!"
+
+#The Fleeting Right-Wing
+ww1_germanrework.23.t:0 "The Fleeting Right-Wing"
+ ww1_germanrework.23.d:0 ""
+ ww1_germanrework.23.a:0 "Perhaps the right can still be revived.."
+
 #Decisions
 
 #Reichstag
@@ -153,6 +168,20 @@ GER_ww1_state_munitions:0 "Investing in State Munitions"
 #Tooltips
 ww1_germanytooltip1:0 "If Belgium accepts our proposal we can expect the profit to benefit our economy as a whole"
 ww1_germanytooltip2:0 "Whichever faction in the right wing is more powerful will determine the outcome of German politics after the inevitable major war in Europe. However, empowering the nationalists will be difficult and will result in an unstable empire prior to the war."
+
+#Reichstag Tooltips
+ww1_germanyspdincreasetooltip1:0 "Predicted §rSPD§! seats §8increase§! by §Y1§!"
+ww1_germanyspdincreasetooltip2:0 "Predicted §rSPD§! seats §8increase§! by §Y2§!"
+
+ww1_germanycpdecreasetooltip1:0 "Predicted §gCentre Party§! seats §8decrease§! by §Y1§!"
+ww1_germanycpdecreasetooltip2:0 "Predicted §gCentre Party§! seats §8decrease§! by §Y2§!"
+
+ww1_germanymfrpincreasetooltip1:0 "Predicted §9Minor Far Right Parties§! seats §8increase§! by §Y1§!"
+
+ww1_germanymcpincreasetooltip1:0 "Predicted §3Minor Conservative Parties§! seats §8increase§! by §Y1§!"
+
+ww1_germanynlpdecreasetooltip1:0 "Predicted §GNLP§! seats §8decrease§! by §Y1§!"
+ww1_germanynlpdecreasetooltip2:0 "Predicted §GNLP§! seats §8decrease§! by §Y2§!"
 
 #Dynamic Modifiers
 GER_agricultural_incentives:0 "Agricultural Incentives"
