--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -168,20 +168,36 @@ GER_ww1_state_munitions:0 "Investing in State Munitions"
 #Tooltips
 ww1_germanytooltip1:0 "If Belgium accepts our proposal we can expect the profit to benefit our economy as a whole"
 ww1_germanytooltip2:0 "Whichever faction in the right wing is more powerful will determine the outcome of German politics after the inevitable major war in Europe. However, empowering the nationalists will be difficult and will result in an unstable empire prior to the war."
+ww1_germanytooltip3:0 "This focus will be automatically completed if a §Bconservative§! chancellor comes into power"
 
 #Reichstag Tooltips
 ww1_germanyspdincreasetooltip1:0 "Predicted §rSPD§! seats §8increase§! by §Y1§!"
 ww1_germanyspdincreasetooltip2:0 "Predicted §rSPD§! seats §8increase§! by §Y2§!"
+ww1_germanyspddecreasetooltip1:0 "Predicted §rSPD§! seats §8decrease§! by §Y1§!"
 
 ww1_germanycpdecreasetooltip1:0 "Predicted §gCentre Party§! seats §8decrease§! by §Y1§!"
 ww1_germanycpdecreasetooltip2:0 "Predicted §gCentre Party§! seats §8decrease§! by §Y2§!"
 
-ww1_germanymfrpincreasetooltip1:0 "Predicted §9Minor Far Right Parties§! seats §8increase§! by §Y1§!"
+ww1_germanymfrpincreasetooltip1:0 "Predicted §NMinor Far Right Parties§! seats §8increase§! by §Y1§!"
 
 ww1_germanymcpincreasetooltip1:0 "Predicted §3Minor Conservative Parties§! seats §8increase§! by §Y1§!"
 
 ww1_germanynlpdecreasetooltip1:0 "Predicted §GNLP§! seats §8decrease§! by §Y1§!"
 ww1_germanynlpdecreasetooltip2:0 "Predicted §GNLP§! seats §8decrease§! by §Y2§!"
+
+ww1_germanypppdecreasetooltip1:0 "Predicted §mPPP§! seats §8decrease§! by §Y1§!"
+
+ww1_germanymlipdecreasetooltip1:0 "Predicted §7Minor Liberal Parties§! seats §8decrease§! by §Y1§!"
+ww1_germanymlipdecreasetooltip2:0 "Predicted §7Minor Liberal Parties§! seats §8decrease§! by §Y2§!"
+
+ww1_germanymlpdecreasetooltip1:0 "Predicted §4Minor Local Parties§! seats §8decrease§! by §Y1§!"
+ww1_germanymlpdecreasetooltip2:0 "Predicted §4Minor Local Parties§! seats §8decrease§! by §Y2§!"
+
+ww1_germanygrpincreasetooltip1:0 "Predicted §CGRP§! seats §8increase§! by §Y1§!"
+ww1_germanygrpincreasetooltip2:0 "Predicted §CGRP§! seats §8increase§! by §Y2§!"
+
+ww1_germanygcpincreasetooltip1:0 "Predicted §BGCP§! seats §8increase§! by §Y1§!"
+ww1_germanygcpincreasetooltip2:0 "Predicted §BGCP§! seats §8increase§! by §Y2§!"
 
 #Dynamic Modifiers
 GER_agricultural_incentives:0 "Agricultural Incentives"
