proper german parties, but maybe not lol

--- a/localisation/english/ww1_parliament_gui_l_english.yml
+++ b/localisation/english/ww1_parliament_gui_l_english.yml
@@ -71,6 +71,7 @@
  GER_total_count_tt:0 "§gReichstag seats§!"
 
  GER_parliament_main_icon_tt:0 "[GERGetParliamentSeatName] - [GERGetParliamentPartyName]"
+ GER_parliament_party_description:0 "[GERGetParliamentPartyDescription]"
 
  GER_parliament_seat_text:0 "Seat [?temp_seat|Y0]"
 
@@ -83,15 +84,29 @@
  GER_the_parliament_seats_will_change:0 "§YParliament seats will change.§!"
 
  #PARTIES
- GER_party_1_text:0 "Social Democratic Party"
- GER_party_2_text:0 "Progressive People's Party"
- GER_party_3_text:0 "National Liberal Party"
- GER_party_4_text:0 "Independent Polish Party"
- GER_party_5_text:0 "Alsace-Lorraine Parties"
- GER_party_6_text:0 "Centre Party"
- GER_party_7_text:0 "Minor Far-Right Parties"
- GER_party_8_text:0 "Minor Local Parties"
- GER_party_9_text:0 "German Reich Party"
- GER_party_10_text:0 "German Conservative Party"
- GER_party_11_text:0 "Minor Conservative Parties"
- GER_party_12_text:0 "Minor Liberal Parties"
+ GER_party_1_text:0 "§QSpartakusbund§!"
+ GER_party_1_text_desc:0 "§L§QSpartakusbund/Spartacus League§!\n§!"
+ GER_party_2_text:0 "§RUSPD§!"
+ GER_party_2_text_desc:0 "§L§RUnabhängige Sozialdemokratische Partei Deutschlands/Independent Social Democratic Party of Germany§!\n§!"
+ GER_party_3_text:0 "§tSPD§!"
+ GER_party_3_text_desc:0 "§L§tSozialdemokratische Partei Deutschlands/Social Democratic Party of Germany§!\nEstablished in 1863. It was one of the earliest §RMarxist-influenced§! parties in the world. The SPD is Europe's largest §RMarxist§! party, and the most popular political party in Germany.§!"
+ GER_party_4_text:0 "§8FVp§!"
+ GER_party_4_text_desc:0 "§L§8Fortschrittliche Volkspartei/Progressive People's Party§!\n§!"
+ GER_party_5_text:0 "§pNLP§!"
+ GER_party_5_text_desc:0 "§L§pNationalliberale Partei/National Liberal Party§!\n§!"
+ GER_party_6_text:0 "§vMinderheiten§!"
+ GER_party_6_text_desc:0 "§L§vNationale Minderheiten/National minorities§!\n§!"
+ GER_party_7_text:0 "§gUnabhängige.§!"
+ GER_party_7_text_desc:0 "§L§gUnabhängige/Independents§!\n§!"
+ GER_party_8_text:0 "§nBdL/BB/DBB§!"
+ GER_party_8_text_desc:0 "§L§nBund der Landwirte/Agrarian League\nBayerischer Bauernbund/Bavarian Peasants' League\nDeutscher Bauernbund/German Farmers’ Association§!\n§!"
+ GER_party_9_text:0 "§7DHP§!"
+ GER_party_9_text_desc:0 "§L§7Deutsch-Hannoversche Partei/German-Hanoverian Party§!\n§!"
+ GER_party_10_text:0 "§qZ§!"
+ GER_party_10_text_desc:0 "§L§qDeutsche Zentrumspartei/German Centre Party§!\nFormed in 1870, it successfully battled the §YKulturkamp§! waged by §gChancellor Otto von Bismarck§! against the §qCatholic Church§!.§!"
+ GER_party_11_text:0 "§3DRP§!"
+ GER_party_11_text_desc:0 "§L§3Deutsche Reichspartei/German Reich Party§!\n§!"
+ GER_party_12_text:0 "§cDkP§!"
+ GER_party_12_text_desc:0 "§L§cDeutschkonservative Partei/German Conservative Party§!\n§!"
+ GER_party_13_text:0 "§NAntisemiten§!"
+ GER_party_13_text_desc:0 "§L§NAntisemitenparteien/Anti-Semitic parties§!\n§!"
