--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -829,6 +829,7 @@ USA_complete_by_1912.tt:0 "§RIf we don't complete this focus by June 1911, we w
  USA_dollar_diplomacy:0 "Continue Business in Latin America"
   USA_dollar_diplomacy_desc:0 "American business has long had a history of deep entrenchment in Central America and the Caribbean. While shady, these policies have kept our businesses very rich, and indirectly contribute much money to the US Economy. We should continue our policy of nudging Latin America towards a direction that supports our businesses."
 USA_troop_surges_in_honduras:0 "Deploy Troops to Honduras"
+USA_fosdick_commission:0 "Fosdick Commission"
 USA_troop_surges_in_honduras_desc:0 "The United States army has had a long history of intervention in Honduras. Starting in 1907 when American troops intervened in Honduras to put down an anti American uprising, the American army has had free reign over Honduras. With protests and strikes erupting across Honduras once again, we should deploy more of our troops to secure stability"
  USA_the_progressive_traitor_desc:0 "Taft has stonewalled the progressive agenda for far too long. From raising tarrifs to firing progressive members in his cabinet, Taft has shown himself to be a good for nothing conservative. We cannot affoard to let this continue, and that's why Roosevelt will be putting an end to it."
  USA_the_progressive_traitor:0 "Fight the Progressive Traitor"
@@ -1170,7 +1171,10 @@ afl_home:0 "Modify §YThe Home Front§! by\nFactory Output: §G+2.50%§!"
 afl_home_no:0 "Modify §YThe Home Front§! by\nFactory Output: §R-2.50%§!"
 
 USA_nationalize_rail:0 "United States Railway Administration"
-sedition_support_home_front:0 "Modify §YThe Home Front§! by\nWeekly Stability: §G+0.10%§!\nStability: §G+15.00%§!\nWar Support: §G+15.00%§!"
+sedition_support_home_front:0 "Modify §YThe Home Front§! by\nWeekly Stability: §G+0.10%§!\nStability: §G+15.00%§!\nWar Support: §G+15.00%§!\nDaily Political Power Gain: §G+0.10§!"
+sedition2_support_home_front:0 "Modify §YThe Home Front§! by\nWeekly Stability: §G+0.20%§!\nWeekly War Support: §G+0.20%§!\nRuling Party Stability Modifier: §G+25.00%§!\nDaily Political Power Gain: §G+0.20§!"
+USA_establish_the_opa:0 "Establish the Office of Price Administration"
+USA_1984:0 "Sedition Act"
 ww1_USA.146.t:0 "The Kaiser, the Beast of Berlin"
 ww1_USA.146.d:0 "The film 'The Kaiser, Beast of Berlin' has finally came out in theaters acorss America. The film depicts the ruthless and diabolical nature of Kaiser Wilhelm, and his truely greedy and imperialist views. In the movie, despite signing a peace treaty with neighboring countries, the Kaiser decides to invade Belguim. When the true extent of Germany's crimes in Belguim are revealed, and the Kaisers direct ordering of the sinking of the RMS Lusitania comes to light, the German generals stage a coup and hand over the Kaiser to the Entente."
 USA_nationalize_coal_mines:0 "Nationalize Coal Mines"
@@ -1193,9 +1197,17 @@ food2_front:0 "Modify §YThe Home Front§! by\nStability: §R-20.00%§!\nWar Sup
 food3_front:0 "Modify §YThe Home Front§! by\nStability: §R-15.00%§!\nWar Support: §R-15.00%§!\nArmy Organization Regain Speed: §R-15.00%§!\nFactory Output: §R-10.00%§!"
 food4_front:0 "Modify §YThe Home Front§! by\nStability: §R-10.00%§!\nWar Support: §R-10.00%§!\nArmy Organization Regain Speed: §R-10.00%§!\nFactory Output: §R-5.00%§!"
 food5_front:0 "Modify §YThe Home Front§! by\nStability: §R-5.00%§!\nWar Support: §R-5.00%§!\nArmy Organization Regain Speed: §R-5.00%§!"
+food_hoover_front:0 "Modify §YThe Home Front§! by\nStability: §G+5.00%§!\nWar Support: §G+5.00%§!\nArmy Organization Regain Speed: §G+5.00%§!\nFactory Output: §G+5.00%§!"
 food6_front:0 "§GOur food production and surplus is sufficent enough to negate any negatives from the outbreak of The Great War!§!"
+USA_mass_expansion_of_the_army:0 "Mass Expansion of the Army"
+USA_herbert_hoover:0 "Herbert Hoovers' Food Administration"
 5_men_home_front:0 "Modify §YThe Home Front§! by\nConsumer Goods Factories factor: §Y-20.0%§!"
 home_front_event.t:0 "Add §YThe Home Front§! which grants (War Support: §R-10.00%§!, Stability: §R-5.00%§!, Mobilization Speed: §R-50.00%§!)"
+opa_front:0 "Modify §YThe Home Front§! by\nConsumer Goods Factories factor: §Y-5.0%§!\nWar Support: §R-10.00%§!\nMobilization Speed: §G+10.00%§!"
+ltpf_front:0 "Modify §YThe Home Front§! by\nWeekly Stability Gain: §G+0.10%§!\nWar Support: §G+10.00%§!\nMobilization Speed: §R-10.00%§!"
+this_hoover.tt:0 "This mission will passively §Gremove§! the debuffs given to us in the event '§YReport on Food Stockpiles§!'. Once all of the debuffs we receieved are removed, the mission will convert towards giving us §Cmobilization speed§!"
+hoover2_front:0 "Modify §YThe Home Front§! by\nMobilization Speed: §G+5.00%§!"
+USA_let_the_people_flourish:0 "Let the People Flourish"
 USA_sedition_act:0 "Espionage Act"
  ww1_USA.152.t:0 "Report on Food Stockpiles"
  ww1_USA.152.d:0 "The Great War reaching America has meant that food will most likely become much scarcer instead of abundant. While we may have passed legislation to help build up food surpluses, it is doubtful that we will face no food issues at all. Either way, the President has ordered a review of just how much food we have to ensure we make the right decisions in terms of food rationing."
@@ -3131,7 +3143,9 @@ BUL_ui_popularity_header:0 "Influence"
  GRE_postpone_elections:0 "Postpone Legislative Elections"
  GRE_postpone_elections_desc:0 "In turbulent times such as these, a strong National Government must be formed in order to safeguard the Kingdom’s interests. Certain Royalist sources claim that the Liberal Party is actively plotting against the King. Legislative Elections will need to be postponed until this Great European War has been concluded."
 USA_the_final_war:0 "The Final War in History"
-USA_the_final_war_desc:0 "We did all we can to keep our neutrality, but Germany's blatan violations of our sovereignty and our people have ultimately forced our hand. Unlike some of our wars of the past, however, this is a truely righteous war. We will win this war and construct a moral world free of war and safe for democracy and prosperity! "
+USA_the_final_war_desc:0 "We did all we can to keep our neutrality, but Germany's blatan violations of our sovereignty and our people have ultimately forced our hand. We will demand congress declare war on Germany to bring democracy and freedom to the Central Powers and thus ensure this is the final war the world ever fights."
+USA_never_ending_offensive:0 "The 'Nail Gun' Strategy"
+USA_entente_training_plan:0 "Amalgamation With the Entente"
  GRE_plan_operation_rodi:0 "Plan Operation Rodi"
 	USA_talented_refugee:0 "Influx of European Refugees"
 ww1_USA.143.a:0 "The people will understand"
