--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -8246,6 +8246,11 @@ USA_stinson_dec.tt:0 "Modifies §YUnited States Army§! by (Divisions speed: §G
 USA_executive_order_2345:0 "Executive Order 2345"
 USA_comor_dec.tt:0 "Modifies §YUnited States Army§! by (Division Organization: §G+10.0%§!)"
 USA_beat_down_anti_army_sentiment:0 "Beat Down Anti Army Sentiment"
+
+USA_mass_expand.tt:0 "Modifies §YUnited States Army§! by:\nDivision training time: §Y-30.00%§!"
+USA_mass_expand2.tt:0 "Modifies §YUnited States Army§! by:\nDivision training time: §Y-10.00%§!\nMinimum Training: §G-10.00%§!"
+USA_mass_expand3.tt:0 "Modifies §YUnited States Army§! by:\nDivision training time: §Y-10.00%§!\nMinimum Training: §G-20.00%§!\nDivision Experience Gain: §G+20.00%"
+USA_mass_expand4.tt:0 "Modifies §YUnited States Army§! by:\nOrganization loss when below 25%: §G-25.00%§!"
 USA_comhor_dec.tt:0 "Modifies §YUnited States Army§! by (Cavarly Attack: §G+15.00%§!, Division Speed: §G+8.00%§!)"
 USA_comhords_dec.tt:0 "Modifies §YUnited States Army§! by (Recruitable Population: §G+15.00%§!)"
 USA_comhords22_dec.tt:0 "Modifies §YUnited States Army§! by (Recruitable Population: §G+25.00%§!, Mobilization Speed: §G+30.00%§!)"
@@ -8361,6 +8366,7 @@ USA_the_final_report:0 "The Final Report"
 USA_the_final_blow:0 "Oust Jose Mandriz"
 elect_rep:0 "Electable 1912 Presidents include §YWilliam Taft§! §YTheodore Roosevelt§! and §YJoseph Cannon§!"
 elect_dem:0 "Electable 1912 Presidents include §YWoodrow Wilson§! §YChamp Clark§! and one §YSecret Canidate§!"
+USA_hoover_food:0 "Efforts of the Food Administration"
 USA_national_war_labour_board:0 "National War Labor Board"
 USA_war_industrial_board:0 "War Industrial Board"
  USA_army_investigation_state_very_poor:0 "§RVery Poor§!"
