--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -8391,6 +8391,7 @@ ww1_USA_clark.1.d:0 "Clark and the current majority of combined progressive Demo
  USA_neutrality_with_a_spine:0 "Neutrality With a Spine"
 USA_sell_food:0 "Purchase American Food"
 USA_private_arms_contracts:0 "Private Arms Contracts"
+USA_private_arms_contracts_desc:0 "While the army don't have a large stockpile of weapons, our private arms companies do. We should privately pressure these companies to open their doors to the Entente and fill in their weapon deficts."
 sell_food_effect:0 "When this decision is taken:\nWeekly Stability Gain: §G+0.10%§!\n(§Y[ROOT.getFlag][ROOT.getName]§!):\nConsumer Goods Factories factor: §Y-5.0%§!"
 ww1_USA_clark.1.a:0 "Make sure to tell obstructionists 'no' in 1914!"
  USA_beat_elitist_stereotype:0 "Challenge the Elitist Stereotypes"
