--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -493,7 +493,9 @@ USA_british_request_loans:0 "Britain has Requested American Loans"
 ENG_intensify_rationing:0 "Intensify Rationing"
 ENG_austerity_measures:0 "Austerity Measures"
 USA_loans_to_the_entente:0 "Revoke Ban On Loans For Nations At War"
+
 USA_increase_food_trade:0 "Increase Food Trade With Entente"
+USA_increase_food_trade_desc:0 "Enente nations are suffering large food shortages, while we have large stockpiles ourselves. To kill two birds with one stone, let's reach out to Entente countries and offer them to dramatically increase food exports to their country for a relatively cheap price."
 USA_loans_to_the_entente_desc:0 "Currently, there is a ban on American banks lending loans to any nations at war. With our economy suffering as of late, lifting this ban would be an easy way to revive the economy while also supporting the nation at war with one of our geopolitical enemies."
 ENG_apply_for_american_loans:0 "Apply for American Loans"
 ENG_apply_for_american_loans_desc:0 "The British economy unfortunately cannot realisticly sustain its self without completly cannibalizing itself or taking on so much debt that we will have no real way of ever paying it back. We will have to look to the sleeping giant of America, a financial giant that we can loan us enough money to pay for the war."
@@ -995,6 +997,7 @@ USA_puerto_rico_government_reform:0 "Puerto Rico State Government Reform"
 USA_global_naval_power_potential:0 "Global Naval Power Potential"
 USA_pursue_expansion_of_naval_production:0 "Pursue Expansion of Naval Production"
 USA_old_policy_in_latin:0 "Oppose Revolutionaries in Latin America"
+USA_old_policy_in_latin_desc:0 "Latin America is increasingly becoming more and more stable in the last few months. If these governments collapse, it would significantly harm U.S businesses across Latin America. We should reach out to Central American governments and offer them small loans to help stabilize their governments."
  USA_neutrality_in_europes_war:0 "Take a Backseat to Europes Problems"
  USA_end_railway_strike_desc:0 "A massive storm is brewing in Pennsylvania, where a large port has been completly shutdown due to strikes. With railway strikers joining them in several local cities, if we do not act quickly there's a chance the devils at the IWW will take this as their chance to cause a mass strike in the United States."
  USA_i_do_solemnly_swear...:0 "I do Solemnly Swear..."
@@ -1358,6 +1361,7 @@ USA_ford_assembly_lines:0 "Rollout Ford Assembly Lines"
 USA_ford_assembly_lines_desc:0 "Ford Motor has recently made a breakthrough with the invention of a so called "assembly line" which has dramatically increased their companies production. We should force the company to give this technology to our ammunition plants, which would dramatically increase their output with said system." 
 appointment:0 "After the §Y1912 election§!, the House of Representatives will increase from §Y391§! seats to §Y433§! seats"
 USA_stabilize_hati:0 "Stabilize Haiti"
+USA_stabilize_hati_desc:0 "The Haitian government has faced its what, 9th president murdered in the last few months? Haiti is in a complete state of anarchy, and if we don't do something the chaos could also harm our business. Let's organize our marines to occupy the country, for now atleast."
 appointment2:0 "We will mantain a narrow majority in the house after the 1910 midterms, preventing possible consequences from a Democrat controlled congress"
 mexican_revolution.tt:0 "§YThis focus will be autocompleted when the§! §GMexican§! revolu§Rtion§! §Yhas begun§!"
 focus_will_be_auto_completed:0 "This focus will be §Yautocompleted§! through an event" 
@@ -3144,6 +3148,9 @@ BUL_ui_popularity_header:0 "Influence"
  GRE_postpone_elections_desc:0 "In turbulent times such as these, a strong National Government must be formed in order to safeguard the Kingdom’s interests. Certain Royalist sources claim that the Liberal Party is actively plotting against the King. Legislative Elections will need to be postponed until this Great European War has been concluded."
 USA_the_final_war:0 "The Final War in History"
 USA_the_final_war_desc:0 "We did all we can to keep our neutrality, but Germany's blatan violations of our sovereignty and our people have ultimately forced our hand. We will demand congress declare war on Germany to bring democracy and freedom to the Central Powers and thus ensure this is the final war the world ever fights."
+USA_question_american_neutrality_desc:0 "Outright abandoning American neutrality is obviously political suicide, but it doesn't mean we can't criticize the blatan war crimes the German Empire is commiting in Belguim. We will address the nation pledging neutrality, but stating we cannot ask Americans to be neutral in thought."
+USA_re_affirm_kill_all_researchers_desc:0 "The imperialist Europeans have once again dragged themselves into a large scale war, over petty lines on a map. We will make it clear from the start that America has no interest in this so called 'Great War'."
+USA_neutrality_in_europes_war_desc:0 "While Europe tears its self apart over silly squabbles, we should take the time to speed up our domestic agenda. Pointing to our pledge to mantain American neutrality in The Great War should help whip up isolationist congress members who have been more wary of our agenda."
 USA_never_ending_offensive:0 "The 'Nail Gun' Strategy"
 USA_entente_training_plan:0 "Amalgamation With the Entente"
  GRE_plan_operation_rodi:0 "Plan Operation Rodi"
