Saudi character standartisation

--- a/localisation/english/ww1_traits_l_english.yml
+++ b/localisation/english/ww1_traits_l_english.yml
@@ -455,3 +455,4 @@
  bonaparte_legacy_louis:0 "Bonaparte Legacy"
  minister_of_national_defense:0 "Minister of National Defense"
  administration_reformer:0 "Administration Reformer"
+ judicial_reformer:0 "Judicial Reformer"
