--- a/localisation/english/parties_l_english.yml
+++ b/localisation/english/parties_l_english.yml
@@ -1212,6 +1212,7 @@
  
  SAU_neutrality_party:0 "Al Saud"
  SAU_fascism_party:0 "Al Saud"
+ SAU_democratic_party:0 "Majlis al-Shura"
  
  YEM_neutrality_party:0 "Banu Al Rusi"
  YEM_fascism_party:0 "Banu Al Rusi"
