--- a/localisation/english/ww1_characters_l_english.yml
+++ b/localisation/english/ww1_characters_l_english.yml
@@ -1743,6 +1743,7 @@ VIN_joost_van_vollenhoven:0 "Joost Van Vollenhoven"
  # DUTCH EAST INDIES
  INS_a_w_frederik_idenburg:0 "Alexander Idenburg"
  INS_frits_van_daalen:0 "Frits van Daalen"
+ INS_volksraad:0 "Volksraad"
 
  # IRELAND
  IRE_michael_collins:0 "Mícheál Ó Coileáin"
