Tweak Serbia guarantee

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -1204,6 +1204,8 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  RUS_lvov_abolish_capital_punishment_desc:0 "Aiming for a more humane and progressive legal framework, the proposal to abolish capital punishment is a significant step towards reform. It reflects a deep commitment to human rights and the intrinsic value of human life, setting a new precedent in the Russian justice system amidst times of upheaval."
  RUS_lvov_abolish_class_race_religion_restriction:0 "Remove Class, Race, and Religion Restrictions"
  RUS_lvov_abolish_class_race_religion_restriction_desc:0 "Marking a commitment to inclusivity and equality, the proposal to abolish all restrictions based on class, race, or religion is set to transform society. This reform promises to dismantle long-standing barriers, ensuring equal rights and opportunities for every citizen in a more equitable Russia."
+ RUS_help_SER:0 "Join Serbian War Effort"
+ RUS_help_SER_desc:0 "Our Orthodox brothers, the Serbs, are at war with a great power. Balkan interests are at stake in Serbia, and we have a duty and a right to protect them."
 
  basmach_released:0 "Turkestan was released"
  alash_released:0 "Qazaqs were released"
