stuff for France

--- a/localisation/english/parties_l_english.yml
+++ b/localisation/english/parties_l_english.yml
@@ -495,6 +495,12 @@
  NFA_fascism_party_long:0 "Gouvernement Militaire Provisoire"
  NFA_petain_party:0 "Petain's Government"
 
+ FRA_francists:0 "Parti Franciste"
+ FRA_francists_long:0 "Parti Franciste"
+
+ FRA_faisceau:0 "Le Faisceau"
+ FRA_faisceau_long:0 "Le Faisceau"
+
  FRA_PCF:0 "PCF"
  FRA_PCF_long:0 "Parti Communiste Français"
  FRA_CNI:0 "Comités Napoléoniens Impérialistes"
