--- a/localisation/english/ww1_characters_l_english.yml
+++ b/localisation/english/ww1_characters_l_english.yml
@@ -1174,6 +1174,7 @@
  FRA_alexandre_millerand_pm_advisor:0 "Alexandre Millerand (First Minister)"
  FRA_edouard_herriot:0 "Édouard Herriot"
  FRA_georges_valois:0 "Georges Valois"
+ FRA_hubert_lagardelle:0 "Hubert Lagardelle"
  FRA_maurice_pujo:0 "Maurice Pujo"
  FRA_gouvernement_provisoire:0 "Gouvernement Provisoire"
  FRA_victoire:0 "Victoria-Louise de Prusse"
