--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -1096,6 +1096,8 @@
  ww1_france.230.t:0 "Some Radical Socialists Join the Conservatives"
  ww1_france.230.d:0 "A cohort of parliamentarians, supported by the opposition, have announced their departure from the radical socialist party. This news is bad, the leftist party has always been a powerful ally in controlling parliament. Fortunately, the president of the radical party, Joseph Caillaux, assured his full support for the government."
  ww1_france.230.a:0 "It was inevitable"
+ nationalists_take_75_af_seats_good:0 "§Y75§! §gMonarchists Deputies§! are joining the §LNationalists§!."
+ nationalists_take_75_af_seats:0 "§R75§! §gMonarchists Deputies§! are leaving the §YCoalition§!, they are all joining the §LNationalists§!."
  FRA_republican_federation_leaving_democratic_bloc:0 "The §BRepublican Federation§! is leaving the §Ydemocratic bloc§!, making us lose §R[?republicain_federation] seats§!."
  FRA_radical_party_is_losing_support:0 "The §CRadical-Socialist Party§! §Rlose 50 parliamentaries§!. Theses parliamentaries join the §2Conservative party§!."
  FRA_radical_party_leaving_democratic_bloc:0 "The §CRadical-Socialist Party§! is leaving the §Ydemocratic bloc§!, making us lose §R[?radical_party] seats§!."
@@ -14808,3 +14810,19 @@ FRA_law_soon:0 "§GA law will be proposed soon by the §YParliament§! to addres
  ww1_france.482.t:0 "La Tunisie Martyre"
  ww1_france.482.d:0 "The French reaction to the manifesto was not long in coming... Abdelaziz Thâalbi was imprisoned based on the statements in his work for "undermining the security of the state". But his legacy will not be forgotten, the fight for freedom continues. Ahmed Essafi and Salah Farhat, close collaborators, promised to continue his work."
  ww1_france.482.a:0 "They wont stop until Tunisia is free"
+
+ ww1_france.483.t:0 "Valois's First Cabinet"
+ ww1_france.483.d:0 "The new Prime Minister George Valois has taken over the Hotel Matignon, residence of the French prime ministers. There, he formed his government, taking advantage of imperial approval to bring together several nationalist and socialist figures. A great admirer of national-syndicalistism, Valois promised the French a major economic reform aimed at accentuating autarky, something that had already been initiated by Emperor Victor Napoleon a few years earlier.\n\nAt the same time, the Prime Minister appointed Marcel Bucard, a close friend, as Minister of the Interior. Marcel Bucard is a convinced nationalist, close to the Italian Mussolini and the notion of Facism."
+ ww1_france.483.a:0 "Nation First."
+
+ ww1_france.484.t:0 "Tensions Between Valois and Bucard"
+ ww1_france.484.d:0 "The Prime Minister and the Minister of the Interior, Marcel Bucard, are in permanent conflict over the question of the internal direction of the country. If Valois advocates gentle nationalization and the maintenance of a free-thinking and egalitarian society, Bucard prefers a more extreme thesis based on eugenics and priority to the "native" French people. This opposition troubles the party, and more generally the management of current affairs."
+ ww1_france.484.a:0 "Nation First ?"
+
+ ww1_france.485.t:0 "Scission in the CNI"
+ ww1_france.485.d:0 "In an open letter to the French, and without informing his superior. Marcel Bucard and several of his collaborators announced that they were leaving the imperialist party, declaring that the latter no longer represented the true values of the French state. In his phamplet, the former interior minister accuses Valois of being a revolutionary trade unionist similar to those of the SFIO, "an infiltrated communist".\n\nBucard also specified creating his own party, leaving the government with several ministers and dozens of deputies rallied to his cause."
+ ww1_france.485.a:0 "This government didn't last long..."
+
+ ww1_france.486.t:0 "Georges Valois Resigns"
+ ww1_france.486.d:0 "After only a few months in power, the Valois government collapsed. Victim of internal dissensions and an incoherent composition, it did not resist the strong opposition between Minister Bucard and the left wing of the party. After becoming unpopular and accused of being a communist, or a disguised SFIO trade unionist, Valois announced that he was leaving the government, a wish accepted by the emperor.\n\nValois is not stopping politics, however, he has promised to continue the monarchist-union struggle of the people."
+ ww1_france.486.a:0 "This government didn't last long..."
