--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -6494,6 +6494,23 @@
  FRA_ww1_the_social_democrat_compromise:0 "The Social Democrat Compromise"
  FRA_ww1_the_social_democrat_compromise_desc:0 "French politics are too tense and our economy too weak to stand up against the central powers on a lasting basis. It is time to initiate a fundamental reform of the government and to transform our economy through the construction of railroads."
 
+ FRA_there_is_another:0 "\"There is Another\""
+ FRA_there_is_another_desc:0 "Finally, after the accumulation of an incredible number of events, George Valois, 15 years ago a figure completely unknown to the general public, was appointed Prime Minister. Thus the way is opened towards an unprecedented economic reformism: national syndicalism."
+ FRA_valois_governement:0 "Nationalist Governement Formed"
+
+ FRA_autarky:0 "French Autarky"
+ FRA_autarky_desc:0 "France must have the means to be autonomous in its supply of resources, but also in the management of its industry and its assets."
+
+ FRA_franciste_rethoric:0 "Franciste Rethoric"
+ FRA_franciste_rethoric_desc:0 "It is obvious that the new government is ambitious and that its reforms cannot only be economic. France must maintain its aura, and to do so, it must unite around strong values aimed at projecting an inevitable influence on the other nations of Europe."
+
+ FRA_syndicalism:0 "Syndicalism"
+ FRA_syndicalism_desc:0 "The ideas of Georges Valois, Georges Sorel and Pierre-Joseph Proudhon cannot be distorted by an exacerbated nationalism, latent anti-Semitism and a forgetting of the struggle of the working classes. A factionalism has established itself within the imperialist group, it is imperative to clarify the party line."
+
+ FRA_nationalism:0 "National-Socialism"
+ FRA_nationalism_desc:0 "A movement is starting in Europe, first in Italy, then here in France. The association of nationalism, royalism and class struggle has always been the objective of the Proudhon circle from which Georges Valois seems inexorably moving away. He no longer has his place in the party."
+
+
 
  FRA_ww1_form_the_proudhon_circle:0 "Form the Proudhon Circle"
  FRA_ww1_form_the_proudhon_circle_desc:0 "The last 40 years have proven that the French Republic is weak. The best years of France were under the reigns of Kings and Emperors. Despite the defeat of Napoleon III, the people can, will, and will still believe in it."
@@ -10565,6 +10582,8 @@ VIN_reorganize_road_network_desc:0 "In order to restore the roads of Indochina, 
 major_nations:0 "(§YMajor Countries§!) :"
 
 FRA_coalition_crash:0 "The §YCartel des Gauches§! Coalition breaks up, causing us to lose our support within the remnants of the §CRadical Party§!, §Ythe Democratic Republican Alliance§!. Our alliance now only consists of parliamentarians from the §RSFIO§! and §Oindependent socialists§!."
+
+nationalist_leave_coalition:0 "The §LNationalists§! leave our §YCoalition§!, making us lose §R[?temp_nationalists] seats§!."
  
 #Saudis
  SAU_Convene_Shura: "Convene The Shura Majlis"
