--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -1356,7 +1356,8 @@ FRA_idea_socialist_income_tax_desc:0 "The creation of an income tax in “slices
  
  
  #FRANCE
- 
+ FRA_idea_french_autarky:0 "Autarky" 
+
  FRA_CGPF:0 "GCPF"
  FRA_CGPF_desc:0 "The "Confédération générale de la production française" is an employers' organization designed to bring together the various employers' corporations."
  FRA_germans_and_italians_are_allied:0 "The Alpine Front"
