--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -8242,7 +8242,7 @@ USA_stinson_plan:0 "Stimson Plan"
 USA_tests_in_mexico:0 "Tests in Mexico"
 USA_national_defense_act:0 "National Defense Act"
 USA_stinson_plan_desc:0 "The American army is very outdated and poorly managed. Luckily, Secretary of War Henry Stimson has came up with a plan to slowly fix this. By increasing centralization of the US army, we can increase its effectiveness in recruiting, organizing, and ensuring the most brilliant minds are making the plans for war."
-USA_stinson_dec.tt:0 "Modifies §YUnited States Army§! by (Divisions speed: §G+2.00%§!, Division Organization: §G+3.0%§!, Max planning factor: §G+2.0%§!, Recruitable Population: §G+4.00%§!)"
+USA_stinson_dec.tt:0 "Modifies §YUnited States Army§! by (Divisions speed: §G+2.00%§!, Division Organization: §G+3.0%§!, Max planning factor: §G+2.0%§!, Recruitable Population: §Y+0.04%§!)"
 USA_executive_order_2345:0 "Executive Order 2345"
 USA_comor_dec.tt:0 "Modifies §YUnited States Army§! by (Division Organization: §G+10.0%§!)"
 USA_beat_down_anti_army_sentiment:0 "Beat Down Anti Army Sentiment"
@@ -8252,8 +8252,8 @@ USA_mass_expand2.tt:0 "Modifies §YUnited States Army§! by:\nDivision training 
 USA_mass_expand3.tt:0 "Modifies §YUnited States Army§! by:\nDivision training time: §Y-10.00%§!\nMinimum Training: §G-20.00%§!\nDivision Experience Gain: §G+20.00%"
 USA_mass_expand4.tt:0 "Modifies §YUnited States Army§! by:\nOrganization loss when below 25%: §G-25.00%§!"
 USA_comhor_dec.tt:0 "Modifies §YUnited States Army§! by (Cavarly Attack: §G+15.00%§!, Division Speed: §G+8.00%§!)"
-USA_comhords_dec.tt:0 "Modifies §YUnited States Army§! by (Recruitable Population: §G+15.00%§!)"
-USA_comhords22_dec.tt:0 "Modifies §YUnited States Army§! by (Recruitable Population: §G+25.00%§!, Mobilization Speed: §G+30.00%§!)"
+USA_comhords_dec.tt:0 "Modifies §YUnited States Army§! by (Recruitable Population: §Y+0.10%§!)"
+USA_comhords22_dec.tt:0 "Modifies §YUnited States Army§! by (Recruitable Population: §Y+0.25%§!, Mobilization Speed: §G+30.00%§!)"
 
 
 USA_mtt.t:0 "Modifies §YUnited States Army§! by (Ground Attack: §G+10%§!)"
