new greek general

--- a/localisation/english/ww1_characters_l_english.yml
+++ b/localisation/english/ww1_characters_l_english.yml
@@ -1534,6 +1534,7 @@ VIN_joost_van_vollenhoven:0 "Joost Van Vollenhoven"
  GRE_dimitris_ioannou:0 "Dimítris Ioánnou"
  GRE_anastasios_charalambis:0 "Anastásios Charalámbis"
  GRE_georgios_polymenakos:0 "Geórgios Polymenákos"
+ GRE_petros_soumilas:0 "Pétros Soumílas"
  GRE_metropolitan_chrysostom:0 "Metropolitan Chrysóstomos"
  GRE_aristeidis_stergiadis:0 "Aristeídis Stergiádis"
  GRE_dimosthenis_ligdopoulos:0 "Dimosthénis Ligdópoulos"
